2010-11-20  Per Bothner  <per@bothner.com>

	* build.xml (slib-scm): Add SRFI-41 files in gnu.kawa.slib.

2010-11-14  Per Bothner  <per@bothner.com>

	* configure.in (AC_CONFIG_FILES): Add gnu/q2/testsuite/Makefile.

2010-11-10  Per Bothner  <per@bothner.com>

	* build.xml: Make use of new kawac task.

2010-11-04  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.11.
	* build.xml (version.release): Likewise.

2010-10-28  Per Bothner  <per@bothner.com>

	* build.xml (slib-scm): Also compile enums.scm.

2010-10-27  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (slib-scm): Update for new scm files.

2010-10-11  Per Bothner  <per@bothner.com>

	* classes-to-skip-for-runtime: Add more classes to skip.

2010-09-29  Per Bothner  <per@bothner.com>

	* build.xml: Make use of <condition> with else clause.
	Move setting of preprocess-HttpServer into build-setting target.
	(check-for-HttpServer): Remove target.
	(select-java7): Depend on build-settings rather than build-tools.

2010-09-20  Per Bothner  <per@bothner.com>

	* build.xml: Add enable-android support.
	(android-classes): New target.

	* build.xml: Change various targets to depend on build-settings
	rather than build-tools.

	* build.xml: Change some targets to "internal" by prefixing
	their names with '-'.

2010-08-28  Per Bothner  <per@bothner.com>

	* build/xml (select-java7): New target.

	* Makefile.am (select-java7, selected-java-source):
	Add missing jdk7 support.
	* configure.in: Map --with-jave-source to JAVA_SOURCE=7 - not 6.

2010-08-27  Per Bothner  <per@bothner.com>

	* classes-to-skip-for-runtime: Add some new classes.

2010-08-26  Per Bothner  <per@bothner.com>

	Replace ExpWalker expression-visitor API by new ExpVisitor.
	Lots of little changes; a few big ones - see gnu/expr/ChangeLog.

2010-07-23  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.10.
	* build.xml (version.release): Likewise.

2010-07-19  Per Bothner  <per@bothner.com>
